committed at 1152 on 30-12

--- a/realestate1/src/main/resources/templates/invalid.html
+++ b/realestate1/src/main/resources/templates/invalid.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>invalid</title>
+  <title>invalid page</title>
   <style>
   body {background-color: powderblue;} 
   h1 {color: blue;}
